Quadrat: Fix mobile spacing

--- a/quadrat/assets/theme.css
+++ b/quadrat/assets/theme.css
@@ -662,12 +662,12 @@ textarea:focus {
 .site-header {
 	position: relative;
 	overflow: inherit;
-	padding: 10px 20px 60px;
+	padding: 10px var(--wp--custom--post-content--padding--left) 60px;
 }
 
 @media (min-width: 480px) {
 	.site-header {
-		padding: var(--wp--custom--margin--vertical);
+		padding: var(--wp--custom--post-content--padding--left);
 	}
 }
 
@@ -846,6 +846,11 @@ textarea:focus {
 
 .wp-block-post-featured-image {
 	margin-top: 0;
+}
+
+.page-content {
+	padding-left: var(--wp--custom--post-content--padding--left);
+	padding-right: var(--wp--custom--post-content--padding--right);
 }
 
 /*# sourceMappingURL=theme.css.map */
